Add images to the product.

--- a/Product-Category-ManyToManyRelationship/appsettings.json
+++ b/Product-Category-ManyToManyRelationship/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "ConnectionStrings": {
+    "DbContextConnectionString": "Server=DESKTOP-663BMID;Database=ProductCategoryDbContext;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Address": {
+    "Scheme": "https",
+    "Host":  "localhost:7035"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
